--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loader-spinner": "^6.0.0-0"
+    "react-is": "^18.3.1",
+    "react-loader-spinner": "^6.0.0-0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "parcel": "^2.3.1",
